--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "lihil[standard]>=0.2.20",
+    "openai>=1.93.0",
     "pytest>=8.4.1",
     "sqlalchemy>=2.0.41",
 ]
